got poc without REST API working
