# monolith/docs/swagger.json
@@ -82,6 +82,23 @@
         }
     },
     "definitions": {
+        "app.StatGroup": {
+            "type": "object",
+            "properties": {
+                "attack": {
+                    "type": "integer"
+                },
+                "defense": {
+                    "type": "integer"
+                },
+                "health": {
+                    "type": "integer"
+                },
+                "speed": {
+                    "type": "integer"
+                }
+            }
+        },
         "app.Unit": {
             "type": "object",
             "properties": {
@@ -94,8 +111,11 @@
                 "name": {
                     "type": "string"
                 },
+                "stats": {
+                    "$ref": "#/definitions/app.StatGroup"
+                },
                 "unit_type": {
-                    "description": "because type is a reserved word",
+                    "description": "because `type` is a reserved word",
                     "type": "integer"
                 }
             }
